# zxing-cpp

./: .gitignore  64BIT_FLAGS_BUGS.md  ADDITIONAL_BUGS_FOUND.md  Claude.md  Package.swift  README.md  zxing-cpp.podspec
core/: CMakeLists.txt
core/src/: Barcode.h  BarcodeFormat.cpp  BarcodeFormat.h  BitHacks.h  Content.cpp  Content.h  Flags.h  GenericGF.cpp  GenericGF.h  ModulusGFFields.cpp  ModulusGFFields.h  MultiFormatReader.cpp  ReedSolomonModulusDecoder.cpp  ReedSolomonModulusDecoder.h  WriteBarcode.cpp  ZXingC.cpp  ZXingC.h  ZXingCpp.h
core/src/aztec/: AZReader.cpp
core/src/codeone/: C1Decoder.cpp  C1Decoder.h  C1Reader.cpp  C1Reader.h  C1Version.h
core/src/composite/: README.md
core/src/dotcode/: DCDecoder.cpp  DCDecoder.h  DCReader.cpp  DCReader.h
core/src/gridmatrix/: GMDecoder.cpp  GMDecoder.h  GMReader.cpp  GMReader.h
core/src/hanxin/: HXDecoder.cpp  HXDecoder.h  HXReader.cpp  HXReader.h
core/src/matrix/: README.md
core/src/matrix/aztec/: AZReader.cpp  AZReader.h
core/src/matrix/datamatrix/: DMReader.cpp  DMReader.h
core/src/matrix/maxicode/: MCReader.h
core/src/matrix/qrcode/: QRReader.cpp  QRReader.h
core/src/maxicode/: MCDetector.cpp  MCDetector.h  MCReader.cpp
core/src/oned/: ODAustraliaPostReader.cpp  ODAustraliaPostReader.h  ODChannelCodeReader.cpp  ODChannelCodeReader.h  ODCodabarReader.cpp  ODCodablockFReader.cpp  ODCodablockFReader.h  ODCode11Reader.cpp  ODCode11Reader.h  ODCode16KReader.cpp  ODCode16KReader.h  ODCode32Reader.cpp  ODCode32Reader.h  ODCode39Reader.cpp  ODCode49Reader.cpp  ODCode49Reader.h  ODDataBarExpandedBitDecoder.cpp  ODDataBarExpandedReader.cpp  ODDataBarLimitedReader.cpp  ODDataBarReader.cpp  ODDatalogic2of5Reader.cpp  ODDatalogic2of5Reader.h  ODDeutschePostReader.cpp  ODDeutschePostReader.h  ODIATA2of5Reader.cpp  ODIATA2of5Reader.h  ODITFReader.cpp  ODIndustrial2of5Reader.cpp  ODIndustrial2of5Reader.h  ODJapanPostReader.cpp  ODJapanPostReader.h  ODKIXCodeReader.cpp  ODKIXCodeReader.h  ODKoreaPostReader.cpp  ODKoreaPostReader.h  ODLOGMARSReader.cpp  ODLOGMARSReader.h  ODMSIReader.cpp  ODMSIReader.h  ODMailmarkReader.cpp  (+21 more)
core/src/other/: README.md
core/src/postal/: ODAustraliaPostReader.cpp  ODAustraliaPostReader.h
core/src/qrcode/: QRReader.cpp
core/src/reader/: DecodeHints.cpp  DecodeHints.h  MultiFormatReader.cpp  MultiFormatWriter.cpp  ReadBarcode.cpp  ReadBarcode.h  Reader.h  WriteBarcode.cpp
core/src/stacked/: README.md
core/src/stacked/gs1/: GTIN.cpp  HRI.cpp
core/src/stacked/pdf417/: PDFReader.cpp  PDFReader.h
core/src/twotrack/: README.md
example/: ZXingOpenCV.h  ZXingQtReader.h  ZXingQtWriter.cpp  ZXingReader.cpp  ZXingWriter.cpp
test/blackbox/: BlackboxTestRunner.cpp  TestReaderMain.cpp  TestWriterMain.cpp
test/fuzz/: fuzzDMEncoder.cpp  fuzzDecodeMatrix.cpp  fuzzReadLinear.cpp  fuzzReadMatrix.cpp
test/unit/: CMakeLists.txt  GS1Test.cpp  GTINTest.cpp  WriteBarcodeTest.cpp
test/unit/aztec/: AZDecoderTest.cpp  AZDetectorTest.cpp  AZEncodeDecodeTest.cpp  AZEncoderTest.cpp  AZHighLevelEncoderTest.cpp
test/unit/datamatrix/: DMEncodeDecodeTest.cpp  DMHighLevelEncodeTest.cpp  DMPlacementTest.cpp  DMSymbolInfoTest.cpp  DMWriterTest.cpp
test/unit/oned/: ODCodaBarWriterTest.cpp  ODCode128ReaderTest.cpp  ODCode128WriterTest.cpp  ODCode39ExtendedModeTest.cpp  ODCode39ReaderTest.cpp  ODCode93ReaderTest.cpp  ODDataBarExpandedBitDecoderTest.cpp  ODDataBarReaderTest.cpp
test/unit/pdf417/: PDF417DecoderTest.cpp  PDF417HighLevelEncoderTest.cpp  PDF417ScanningDecoderTest.cpp  PDF417WriterTest.cpp
test/unit/qrcode/: MQRDecoderTest.cpp  QRBitMatrixParserTest.cpp  QRDataMaskTest.cpp  QRDecodedBitStreamParserTest.cpp  QREncoderTest.cpp  QRErrorCorrectionLevelTest.cpp  QRFormatInformationTest.cpp  QRModeTest.cpp  QRVersionTest.cpp  QRWriterTest.cpp  RMQRDecoderTest.cpp
wrappers/android/zxingcpp/src/main/cpp/: ZXingCpp.cpp
wrappers/android/zxingcpp/src/main/java/zxingcpp/: BarcodeReader.kt
wrappers/dotnet/ZXingCpp/: ZXingCpp.cs
wrappers/ios/Sources/Wrapper/: ZXIFormat.h  ZXIFormatHelper.mm
wrappers/ios/Sources/Wrapper/Reader/: ZXIBarcodeReader.mm  ZXIReaderOptions.mm
wrappers/ios/Sources/Wrapper/Writer/: ZXIBarcodeWriter.mm
wrappers/kn/src/nativeMain/kotlin/zxingcpp/: BarcodeFormat.kt
wrappers/python/: zxing.cpp
wrappers/wasm/: BarcodeReader.cpp  BarcodeWriter.cpp
wrappers/winrt/: BarcodeReader.cpp  BarcodeReader.h
